src/test/resources/scripts/language/parser/valid/binary/boolean/shortCircuit.sbsc
let {
  a = (): bool -> {
    fail();
    return false;
  }
in !(false && a());