src/test/resources/scripts/language/parser/invalid/coercion/andFunction.sbsc
// should not be able to && a function

a = false && (): bool -> false;

return false;